<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:layout_width="match_parent"
            app:layout_heightPercent="12%"
            android:background="@drawable/bg_curve"
            android:id="@+id/header"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/ic_logo_zt_white"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:visibility="gone"
                android:id="@+id/txt_header_gizi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Questions"
                android:textColor="@color/colorSemiWhite"
                android:textSize="22dp"
                android:layout_marginTop="-20dp"
                android:layout_marginBottom="-5dp"/>


        </LinearLayout>

        <RelativeLayout
            android:layout_below="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="5dp">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical"
                android:layout_above="@+id/bottom">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="5dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="5dp">
                        <TextView
                            android:paddingLeft="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_name"
                            android:textSize="15dp"
                            android:layout_marginLeft="5dp"/>
                        <EditText
                            android:id="@+id/edt_berat_badan"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_input"
                            android:layout_margin="5dp"
                            android:padding="13dp"
                            android:textColor="#b9b8b8"
                            android:hint="@string/visitor_name"
                            android:inputType="number" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="5dp">
                        <TextView
                            android:paddingLeft="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_suhu"
                            android:textSize="15dp"
                            android:layout_marginLeft="5dp"/>
                        <EditText
                            android:id="@+id/edt_tinggi_badan"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_input"
                            android:layout_margin="5dp"
                            android:padding="13dp"
                            android:textColor="#b9b8b8"
                            android:hint="36"
                            android:inputType="number" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="5dp">
                        <TextView
                            android:paddingLeft="10dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/label_hp"
                            android:textSize="15dp"
                            android:layout_marginLeft="5dp"/>
                        <EditText
                            android:id="@+id/edt_lingkar_pinggang"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_input"
                            android:layout_margin="5dp"
                            android:padding="13dp"
                            android:textColor="#b9b8b8"
                            android:hint="+628123456789"
                            android:inputType="number" />
                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

            <LinearLayout
                android:id="@+id/bottom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:orientation="vertical"
                android:background="@color/colorWhite">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:background="#c1c1c1"
                    android:id="@+id/line"/>
                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="6dp"
                    android:layout_marginLeft="6dp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/label_simpan"
                    android:background="@drawable/btn_round_pink_save"
                    android:elevation="3dp"
                    android:textSize="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"/>
            </LinearLayout>

        </RelativeLayout>

    </android.support.percent.PercentRelativeLayout>

</android.support.constraint.ConstraintLayout>